scripts/nullness/nullgtn/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8.txt
../nullgtn/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/statements/SET_ArrayPlace.java:14: error: [initialization.fields.uninitialized] the constructor does not initialize fields: expression
    private SET_ArrayPlace(ArrayPlace... arrayPlaces) {
            ^
../nullgtn/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/statements/FOR.java:17: error: [initialization.fields.uninitialized] the constructor does not initialize fields: from, to
    private FOR(NumericVariable variable) {
            ^
../nullgtn/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/statements/IF.java:29: error: [override.return] Incompatible return type.
    public String toString() {
           ^
  found   : @Initialized @Nullable String
  required: @Initialized @NonNull String
  Consequence: method in @Initialized @NonNull IF
    @Initialized @Nullable String toString(@Initialized @NonNull IF this)
  cannot override method in @Initialized @NonNull Object
    @Initialized @NonNull String toString(@Initialized @NonNull Object this)
../nullgtn/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/statements/IF.java:35: error: [assignment] incompatible types in assignment.
            HPBasicProgram.nextLineNumber = lineNumber;
                                            ^
  found   : @Initialized @Nullable Integer
  required: @Initialized @NonNull Integer
../nullgtn/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/statements/NEXT.java:28: error: [unboxing.of.nullable] unboxing a possibly-null reference HPBasicProgram.maxValueForLoopVariable.get(varName)
        int maximalValue = HPBasicProgram.maxValueForLoopVariable.get(varName);
                                                                     ^
../nullgtn/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/statements/NEXT.java:30: error: [assignment] incompatible types in assignment.
            HPBasicProgram.nextLineNumber = HPBasicProgram.lineNumberForLoopVariable.get(varName);
                                                                                        ^
  found   : @Initialized @Nullable Integer
  required: @Initialized @NonNull Integer
../nullgtn/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/statements/REPLACE.java:18: error: [initialization.fields.uninitialized] the constructor does not initialize fields: expression
    private REPLACE(StringVariable variable, NumericExpression from, NumericExpression to) {
            ^
../nullgtn/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/HPBasicProgram.java:13: error: [initialization.static.field.uninitialized] static field nextLineNumber not initialized
    public static Integer nextLineNumber;
                          ^
../nullgtn/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/HPBasicProgram.java:31: error: [unboxing.of.nullable] unboxing a possibly-null reference currentLineNumber
            Statement statement = lines.getStatementAtLineNumber(currentLineNumber);
                                                                 ^
../nullgtn/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/NumericVariable.java:11: error: [initialization.fields.uninitialized] the constructor does not initialize fields: value
    public NumericVariable(String name) {
           ^
../nullgtn/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/FunctionVariable.java:9: error: [initialization.fields.uninitialized] the constructor does not initialize fields: body
    public FunctionVariable(String name) {
           ^
../nullgtn/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/ProgramLines.java:32: error: [return] incompatible types in return.
        return lines.get(lineNumber);
                        ^
  type of expression: @Initialized @Nullable Statement
  method return type: @Initialized @NonNull Statement
../nullgtn/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/ProgramLines.java:36: error: [return] incompatible types in return.
        return lines.higherKey(lineNumber);
                              ^
  type of expression: @Initialized @Nullable Integer
  method return type: @Initialized @NonNull Integer
Note: ../nullgtn/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/functions/TIM.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
13 errors
